--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "1.13.5",
+    "com.unity.ext.nunit": "1.0.0",
+    "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.package-manager-ui": "2.2.0",
     "com.unity.probuilder": "4.5.2",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
