--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.burst": "1.8.18",
     "com.unity.collab-proxy": "2.4.3",
+    "com.unity.entities": "1.3.5",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
